// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Log 1`] = `
<DocumentFragment>
  <div
    class="react-lazylog-searchbar _3hsz3SFOTsWryCiRA9Mjtq"
  >
    <input
      autocomplete="off"
      class="react-lazylog-searchbar-input _2JObJsQyVcVoB1YD6078ip"
      disabled=""
      name="search"
      placeholder="Search"
      type="text"
      value=""
    />
    <button
      class="react-lazylog-searchbar-filter inactive qZaVIaYTJWY-GaoXJJ2Cp _3cXa-36GYrmnrGIXEg46cX"
      disabled=""
    >
      <svg
        class="_1lq6olr9h2p7MJDCA8c-aL"
        viewBox="0 0 286.054 286.054"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.939 44.696h178.784a8.931 8.931 0 0 0 8.939-8.939V8.939A8.937 8.937 0 0 0 187.723 0H8.939C4.005 0 0 4.005 0 8.939v26.818c0 4.934 4.005 8.939 8.939 8.939zm268.176 35.757H8.939C4.005 80.453 0 84.457 0 89.392v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939V89.392a8.936 8.936 0 0 0-8.939-8.939zM8.939 205.601h178.784a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939H8.939A8.937 8.937 0 0 0 0 169.844v26.818a8.937 8.937 0 0 0 8.939 8.939zm268.176 35.757H8.939A8.937 8.937 0 0 0 0 250.297v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939z"
        />
      </svg>
    </button>
    <span
      class="react-lazylog-searchbar-matches inactive _3cXa-36GYrmnrGIXEg46cX"
    >
      0 matches
    </span>
  </div>
  <div
    style="overflow: visible; height: 0px; width: 0px;"
  >
    <div
      aria-label="grid"
      aria-readonly="true"
      class="ReactVirtualized__Grid ReactVirtualized__List react-lazylog _3NRgTLvWbyfWD-1xileYWR"
      role="grid"
      style="box-sizing: border-box; direction: ltr; position: relative; width: 0px; -webkit-overflow-scrolling: touch; will-change: transform; overflow-x: hidden; overflow-y: auto;"
      tabindex="0"
    />
  </div>
  <div
    class="Log2-logActions-3"
  >
    <span
      class="Log2-logToolbarButton-8 Log2-goToLineButton-9"
      title="Go to Line"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon "
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M4,17V9H2V7H6V17H4M22,15C22,16.11 21.1,17 20,17H16V15H20V13H18V11H20V9H16V7H20A2,2 0 0,1 22,9V10.5A1.5,1.5 0 0,1 20.5,12A1.5,1.5 0 0,1 22,13.5V15M14,15V17H8V13C8,11.89 8.9,11 10,11H12V9H8V7H12A2,2 0 0,1 14,9V11C14,12.11 13.1,13 12,13H10V15H14Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
    <span
      class=""
      title="Follow Log"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text Log2-logToolbarButton-8 Log2-followButtonFollowing-4 MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon Log2-followLogIconFollowing-5"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`should render without following 1`] = `
<DocumentFragment>
  <div
    class="react-lazylog-searchbar _3hsz3SFOTsWryCiRA9Mjtq"
  >
    <input
      autocomplete="off"
      class="react-lazylog-searchbar-input _2JObJsQyVcVoB1YD6078ip"
      disabled=""
      name="search"
      placeholder="Search"
      type="text"
      value=""
    />
    <button
      class="react-lazylog-searchbar-filter inactive qZaVIaYTJWY-GaoXJJ2Cp _3cXa-36GYrmnrGIXEg46cX"
      disabled=""
    >
      <svg
        class="_1lq6olr9h2p7MJDCA8c-aL"
        viewBox="0 0 286.054 286.054"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.939 44.696h178.784a8.931 8.931 0 0 0 8.939-8.939V8.939A8.937 8.937 0 0 0 187.723 0H8.939C4.005 0 0 4.005 0 8.939v26.818c0 4.934 4.005 8.939 8.939 8.939zm268.176 35.757H8.939C4.005 80.453 0 84.457 0 89.392v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939V89.392a8.936 8.936 0 0 0-8.939-8.939zM8.939 205.601h178.784a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939H8.939A8.937 8.937 0 0 0 0 169.844v26.818a8.937 8.937 0 0 0 8.939 8.939zm268.176 35.757H8.939A8.937 8.937 0 0 0 0 250.297v26.818a8.937 8.937 0 0 0 8.939 8.939h268.176a8.931 8.931 0 0 0 8.939-8.939v-26.818a8.931 8.931 0 0 0-8.939-8.939z"
        />
      </svg>
    </button>
    <span
      class="react-lazylog-searchbar-matches inactive _3cXa-36GYrmnrGIXEg46cX"
    >
      0 matches
    </span>
  </div>
  <div
    style="overflow: visible; height: 0px; width: 0px;"
  >
    <div
      aria-label="grid"
      aria-readonly="true"
      class="ReactVirtualized__Grid ReactVirtualized__List react-lazylog _3NRgTLvWbyfWD-1xileYWR"
      role="grid"
      style="box-sizing: border-box; direction: ltr; position: relative; width: 0px; -webkit-overflow-scrolling: touch; will-change: transform; overflow-x: hidden; overflow-y: auto;"
      tabindex="0"
    />
  </div>
  <div
    class="Log2-logActions-13"
  >
    <span
      class="Log2-logToolbarButton-18 Log2-goToLineButton-19"
      title="Go to Line"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon "
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M4,17V9H2V7H6V17H4M22,15C22,16.11 21.1,17 20,17H16V15H20V13H18V11H20V9H16V7H20A2,2 0 0,1 22,9V10.5A1.5,1.5 0 0,1 20.5,12A1.5,1.5 0 0,1 22,13.5V15M14,15V17H8V13C8,11.89 8.9,11 10,11H12V9H8V7H12A2,2 0 0,1 14,9V11C14,12.11 13.1,13 12,13H10V15H14Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
    <span
      class=""
      title="Follow Log"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text Log2-logToolbarButton-18 MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            class="mdi-icon "
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </span>
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;
